# tokenbowl-mcp

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  LICENSE  README.md  TRADE_PARSER.md  app.py  background_refresh.py  build_cache.py  cache_client.py  clear_cache.py  cron_refresh.sh  debug_redis.py  dump.rdb  example_trade_parse.py  extract_trade_proposal.py  fetch_week3_data.py  ffnerd_to_sleeper.json  ffnerds_mcp.py  logfire_middleware.py  main_mcp.py  players_cache_redis.py  pyproject.toml  pytest.ini  refresh_cache.py  refresh_cache_render.py  render.yaml  request_logger.py  scratchpad-issue-12-league-id-env-var.md  scratchpad-issue-42-player-stats-refactor.md  scratchpad-issue-5-improve-docstrings.md  scratchpad-issue-53-player-stats-all-weeks.md  scratchpad-issue-6-monitoring-dashboard.md  scratchpad-issue-63-filter-player-cache-fields.md  scratchpad-issue-73-logfire-levels.md  scratchpad-issue-8-waiver-wire.md  scratchpad-issue-81-coroutine-error.md  sleeper_mcp.py  sleeper_to_ffnerd.json  (+10 more)
.claude/: REFACTORING_SUMMARY.md  settings.json
.github/: dependabot.yml
data/: injury_report_2025.md  mapping_report.txt  player_mapping.json  unmapped_players.csv  week3_data.json
ffnerd/: __init__.py  cache.py  client.py  enricher.py  mapper.py
lib/: __init__.py  decorators.py  enrichment.py  league_tools.py  validation.py
picks/: week4_picks.md
scratchpads/: issue-108-optimize-mcp-context-usage.md  issue-11-organize-scratchpads-plan.md  issue-111-monday-night-emergency-tool.md  issue-113-refactor-prompts.md  issue-17-ffnerd-enrichment-plan.md  (+26 more)
(+115 files in other folders)
